fixed letter spacing in h2

--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,7 @@ h2 {
   font-weight: var(--font-weight-regular);
   text-transform: uppercase;
   padding-bottom: 0.75rem;
+  letter-spacing: 0.25rem;
 }
 
 .description {
